Perkin-UAT/force-app/main/default/objects/C_META_OwnedByCompany_Mapping__mdt/C_META_OwnedByCompany_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This is used for searches  to match to determine the Ownedvbycompany. the style is &quot;EAV&quot;</description>
    <label>C.META: OwnedByCompany Mapping</label>
    <pluralLabel>C.META: OwnedByCompany Mapping</pluralLabel>
</CustomObject>