Perkin-UAT/force-app/main/default/objects/C_META_OwnedByCompany_Mapping__mdt/fields/Owned_By_Company__c.field-meta.xml
<CustomField>
    <fullName>Owned_By_Company__c</fullName>
    <description>the final value of Owned By Company (LSDX, AES, or TBD)</description>
    <label>Owned By Company</label>
    <length>10</length>
    <type>Text</type>
</CustomField>