Perkin-UAT/force-app/main/default/objects/C_META_OwnedByCompany_Mapping__mdt/fields/searchValue__c.field-meta.xml
<CustomField>
    <fullName>searchValue__c</fullName>
    <description>he value to match against</description>
    <inlineHelpText>he value to match against</inlineHelpText>
    <label>searchValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>