Perkin-UAT/force-app/main/default/objects/C_META_OwnedByCompany_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>this is the Product Line, Sales Org,  Object, Record Type</description>
    <inlineHelpText>this is the Product Line, Sales Org,  Object, Record Type</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>