Perkin-UAT/force-app/main/default/objects/C_META_OwnedByCompany_Mapping__mdt/listViews/OBC_Map_ALL.listView-meta.xml
<ListView>
    <fullName>OBC_Map_ALL</fullName>
    <columns>Type__c</columns>
    <columns>searchValue__c</columns>
    <columns>Owned_By_Company__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>OBC Map: (ALL)</label>
    <language>en_US</language>
</ListView>