Perkin-UAT/force-app/main/default/objects/C_META_OwnedByCompany_Mapping__mdt/listViews/OBC_Map_Record_Type.listView-meta.xml
<ListView>
    <fullName>OBC_Map_Record_Type</fullName>
    <columns>Type__c</columns>
    <columns>searchValue__c</columns>
    <columns>Owned_By_Company__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>RTYPE</value>
    </filters>
    <label>OBC Map: Record Type</label>
    <language>en_US</language>
</ListView>