Perkin-UAT/force-app/main/default/objects/C_META_OwnedByCompany_Mapping__mdt/listViews/OBC_Map_SAI.listView-meta.xml
<ListView>
    <fullName>OBC_Map_SAI</fullName>
    <columns>Type__c</columns>
    <columns>searchValue__c</columns>
    <columns>Owned_By_Company__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>SAI</value>
    </filters>
    <label>OBC Map: SAI</label>
    <language>en_US</language>
</ListView>